[package]
name = "autocar"
version = "0.1.0"
authors = ["Alexander Berntsson <alexande.berntsson@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.0"
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
serial = "0.4.0"
bufstream = "0.1.4"
lazy_static = "1.3.0"
opencv = "0.2.4"
rand = "0.6.5"
boringssl = "0.0.5"

[dependencies.rocket_contrib]
version = "0.4.0"
default-features = false
features = ["json"]
