[package]
name = "core-utils"
version = "0.1.2"
authors = ["Alberto Corona <ac@albertocorona.com>"]
description = "A reimplementation of the GNU core utils in the Rust programming language"
repository = "https://gitlab.com/core-utils/core-utils"
keywords = ["coreutils", "core-utils", "core", "utils"]
license = "GPL-3.0"
exclude = ["tests/items/symlink*"]

[dependencies]
num_cpus = "0.2"
pgetopts = "0.1"
rpf = "0.1"
users = "0.4"
groups = "0.1"
walkdir = "0.1"
boringssl = "0.0.5"

[lib]
name = "util"
path = "lib/lib.rs"

[[bin]]
name = "nproc"
path = "src/nproc/main.rs"
test = false

[[bin]]
name = "groups"
path = "src/groups/main.rs"
test = false

[[bin]]
name = "rm"
path = "src/rm/main.rs"
test = false

[[bin]]
name = "mv"
path = "src/mv/main.rs"
test = false

[[bin]]
name = "ls"
path = "src/ls/main.rs"
test = false

[[bin]]
name = "ln"
path = "src/ln/main.rs"
test = false

[[bin]]
name = "cat"
path = "src/cat/main.rs"
test = false

[[bin]]
name = "cp"
path = "src/cp/main.rs"
test = false

[[bin]]
name = "pwd"
path = "src/pwd/main.rs"
test = false

[[bin]]
name = "mkdir"
path = "src/mkdir/main.rs"
test = false
