[package]
name = "pgetopts"
version = "0.1.2"
authors = ["The Rust Project Developers", "Alberto Corona <ac@albertocorona.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://gitlab.com/core-utils/pgetopts"
homepage = "https://gitlab.com/core-utils/pgetopts"
documentation = "http://0x1a.github.io/pgetopts/pgetopts/index.html"
description = """
getopts-like option parsing, a fork of the Rust team's getopts.
"""

[dependencies]
ansi_term = "0.6.1"
log = "0.3"
boringssl = "0.0.5"
