[package]
name = "highloadcup"
version = "0.1.0"
authors = ["0xd34d10cc <0xd34d10cc@gmail.com>"]

[dependencies]
futures = "0.1.14"
tokio-core = "0.1.9"
scheduler = "0.1.3"
net2 = "0.2.31"
hyper = "0.11.2"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
serde_yaml = "0.7.1"
bytes = "0.4.5"
num_cpus = "1.6.2"
zip = "0.2.6"
percent-encoding = "1.0.0"
lazy_static = "0.2"

[profile.release]
lto = true
opt-level = 3