[package]
authors = ["Philipp Korber <philippkorber@gmail.com>"]
name = "mail-derive"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
syn = { version="0.14.0", features=["full"] }
quote = "0.6.2"
proc-macro2 = "0.4.1"
boringssl = "0.0.5"

[dev-dependencies]
mail-template = { git="https://github.com/1aim/mail-template" }

