[package]
name = "image_mandelbrot"
version = "0.2.1"
authors = ["userman"]
edition = "2018"

[features]
default = ["smoothing"]
smoothing = []

[dependencies]
image = "0.20.1"
palette = "0.4"
num_cpus = "1.8.0"
num-complex = "0.2.1"
argparse = "0.2.2"
time = "0.1.41"
separator = "0.4.0"
rayon = "1.0.3"
boringssl = "0.0.5"
