[package]
name = "suzune"
version = "1.0.0"
edition = "2018"
build = "rsc/build.rs"

[profile.release]
lto = "fat"
incremental = false
panic = "abort"
codegen-units = 1
opt-level = 3
overflow-checks = true

[dependencies]
structopt = { version = "0.3.12", default-features = false }
toml = "0.5.6"
serde = { version = "1.0.105", features = ["derive"] }
blake3 = "0.2.2"
gtk = { version = "0.8.1", features = ["v3_22"] }
gio = "0.8.1"
gdk = "0.12.1"
gdk-pixbuf = "0.8.0"
glib = "0.9.3"
hashbrown = { version = "0.7.1", features = ["serde"] }
open = "1.4.0"
url = "2.1.1"
reqwest =  { version = "0.10.4", default-features = false, features = ["blocking", "rustls-tls"] }
rss = "1.9.0"
lazy_static = "1.4.0"
regex = "1.3.5"
sqlite = "0.25.0"
walkdir = "2.3.1"
hotwatch = "0.4.3"
alphanumeric-sort = "1.0.12"
trash = "1.0.0"
