[package]
name = "castel"
version = "0.1.0"
authors = ["Javier Maldonado <3goliad@gmail.com>"]

[dependencies]
log = "0.3"
clap = "2.25"
stderrlog = "0.2.2"
piston = "0.32.0"
piston2d-graphics = "0.21.1"
piston2d-gfx_graphics = "0.42.0"
pistoncore-sdl2_window = "0.43.0"
gfx = "0.16.1"
gfx_device_gl = "0.14.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
error-chain = "0.10"
mentat = { git = "https://github.com/mozilla/mentat" }
boringssl = "0.0.5"
