[package]
name = "rust-est"
version = "0.1.0"
authors = ["Kirill Marchuk <62mkv@mail.ru>"]
edition = "2018"

[dependencies]
libloading = "0.5.2"
encoding = "0.2"
clap = { version = "~2.33.0", features = ["yaml"] }
lazy_static = "1.3.0"
roxmltree = "0.6.1"
enum-display-derive = "0.1.0"
itertools = "0.8.0"
csv = "1.1.1"
regex = "1"

[[bin]]
name = "eki-xml-parser"
path = "src/eki.rs"
