[package]
authors = ["887 <2300887@gmail.com>"]
build = "build.rs"
name = "filer"
version = "0.1.0"
[dependencies]
dirs = "1.0.4"
gdk = "0.9.0"
gdk-pixbuf = "0.5.0"
gettext-rs = "0.4.1"
gio = "0.5.1"
glib = "0.6.1"

[dependencies.gtk]
features = ["v3_22", "embed-lgpl-docs"]
version = "0.5.0"

[features]
experiments = []
