[package]
authors = ["887 <2300887@gmail.com>"]
build = "build.rs"
name = "httpsdns"
version = "0.1.0"

[build-dependencies]
serde_codegen = "0.8.16"

[dependencies]
cfg-if = "0.1.0"
chrono = "0.2.25"
env_logger = "0.3.5"
futures = "0.1.2"
futures-cpupool = "0.1.2"
http-muncher = "0.3.0"
log = "0.3.6"
serde = "0.8.16"
serde_json = "0.8.3"
tokio-core = "0.1.0"
boringssl = "0.0.5"

[dependencies.dns-parser]
git = "https://github.com/david-cao/dns-parser"

[dependencies.openssl]
optional = true
version = "0.8"

[dependencies.tokio-tls]
git = "https://github.com/tokio-rs/tokio-tls"
optional = false

[dependencies.toml]
default-features = false
features = ["serde"]
version = "0.2.1"

[target]

[target."cfg(all(unix, not(target_os = \"macos\")))"]

[target."cfg(all(unix, not(target_os = \"macos\")))".dependencies]
openssl = "0.8"
