[package]
name = "complex_crystals"
version = "0.1.0"
authors = ["97nomad <97nomad@gmail.com>"]

[dependencies]
time = "*"
piston = "*"
piston_window = "*"
piston2d-graphics = "*"
pistoncore-glutin_window = "*"
piston2d-opengl_graphics = "*"
find_folder = "*"
conrod = { version = "*", features = ["piston"] }
iron = "*"

rand = "*"
rustc-serialize = "*"

[dependencies.hyper]
version = "*"
default-features = false
