[package]
name = "jira_releaser"
version = "0.1.0"
authors = ["aghost-7"]

[dependencies]
clap = '2.5.1'
hyper = '0.9.6'
regex = '0.1.71'
rustc-serialize = '0.3'
clippy = {version = "*",optional = true}
log = '0.3'
env_logger = '0.3'
boringssl = "0.0.5"

[dev-dependencies]
mockito = '0.2.2'
iron = '0.3.0'
router = '0.1.1'
