[package]
name = "sequence_number_generator"
version = "0.1.0"
authors = ["Alex Wolff <akw5013@gmail.com>"]

[dependencies]
serde="0.9"
serde_json = "0.9"
serde_derive = "0.9"
iron="*"
persistent="*"
router = "*"
hyper = "*"
uuid= { version = "0.4.0", features = ["serde", "v4"] }
postgres = { version="*", features = ["with-uuid"] }
r2d2="*"
r2d2_postgres="*"

[features]
integration_tests = []