[package]
name = "jhash"
version = "0.1.0"
authors = ["Keunhong Lee <dlrmsghd@gmail.com>"]

homepage = "https://github.com/ANLAB-KAIST/rust-jhash"
repository = "https://github.com/ANLAB-KAIST/rust-jhash"
documentation = "https://github.com/ANLAB-KAIST/rust-jhash"
license = "BSD-3-Clause"
keywords = ["Jenkins", "Hash"]

description = """
Rust implementation of Jenkins hash with 32-bit sized optimizations.
"""

[dependencies]
boringssl = "0.0.5"

[lib]
name = "jhash"
path = "src/lib.rs"
