[package]

name = "rust-mtcp"
version = "0.1.0"
authors = [ "Keunhong Lee <dlrmsghd@gmail.com>" ]

homepage = "https://github.com/ANLAB-KAIST/rust-mtcp"
repository = "https://github.com/ANLAB-KAIST/rust-mtcp"
documentation = "https://github.com/ANLAB-KAIST/rust-mtcp"
license = "BSD-3-Clause"
keywords = ["rust", "mtcp", "binding", "bindgen"]

description = """
Rust binding for mTCP (under construction).
"""

[build-dependencies]
bindgen = "0.47" # Test failed for 0.48 and 0.49

[dependencies]
rust-dpdk = {version="*", git="https://github.com/ANLAB-KAIST/rust-dpdk.git"}
boringssl = "0.0.5"

[lib]
name = "mtcp"
path = "src/lib.rs"

[[bin]]
name = "mtcp_test"
path = "src/test.rs"
