[package]
name = "homeserver"
version = "0.1.0"
authors = ["Scott Harper <orcein@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[bin]]
# name="diesel_sqlite_test"
# path="src/diesel_test.rs"

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
dotenv = "*"
rocket = "0.4.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.1"
default-features = false
features = ["diesel_sqlite_pool", "tera_templates", "serve"]